force-app/main/default/objects/External_Contract__c/External_Contract__c.object-meta.xml
<CustomObject>
    <label>External Contract</label>
    <nameField>
        <displayFormat>EC-{000000}</displayFormat>
        <label>External Contract</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>External Contract</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>