force-app/main/default/objects/External_Contract__c/fields/Activated_By__c.field-meta.xml
<CustomField>
    <fullName>Activated_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Activated By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>External_Contract</relationshipName>
    <type>Lookup</type>
</CustomField>