force-app/main/default/objects/External_Contract__c/fields/Charge_UOM__c.field-meta.xml
<CustomField>
    <fullName>Charge_UOM__c</fullName>
    <label>Charge UOM</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ST_Rate_UOM</valueSetName>
    </valueSet>
</CustomField>