force-app/main/default/objects/External_Contract__c/fields/Destination_City__c.field-meta.xml
<CustomField>
    <fullName>Destination_City__c</fullName>
    <label>Destination_City</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ST_Destination</valueSetName>
    </valueSet>
</CustomField>