force-app/main/default/objects/External_Contract__c/fields/Filter_By__c.field-meta.xml
<CustomField>
    <fullName>Filter_By__c</fullName>
    <label>Filter By</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Customer Only</fullName>
                <default>true</default>
                <label>Customer Only</label>
            </value>
            <value>
                <fullName>Origin Hub</fullName>
            </value>
            <value>
                <fullName>Billing Entity</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>