force-app/main/default/objects/External_Contract__c/fields/Monthly_Contract__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Contract__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Monthly Contract</label>
    <type>Checkbox</type>
</CustomField>