force-app/main/default/objects/External_Contract__c/fields/Number_Of_Shipment__c.field-meta.xml
<CustomField>
    <fullName>Number_Of_Shipment__c</fullName>
    <label>Number Of Shipment</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>