force-app/main/default/objects/External_Contract__c/fields/Origin_City__c.field-meta.xml
<CustomField>
    <fullName>Origin_City__c</fullName>
    <label>Origin City</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>RT_Origin</valueSetName>
    </valueSet>
</CustomField>