force-app/main/default/objects/External_Contract__c/fields/Shipment_Charge_Beyond_Limit__c.field-meta.xml
<CustomField>
    <fullName>Shipment_Charge_Beyond_Limit__c</fullName>
    <label>Shipment Charge Beyond Limit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>