force-app/main/default/objects/External_Contract__c/fields/ST_Destination_City__c.field-meta.xml
<CustomField>
    <fullName>ST_Destination_City__c</fullName>
    <label>Destination City</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Cities</valueSetName>
    </valueSet>
</CustomField>