force-app/main/default/objects/External_Contract__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Customer__c</columns>
    <columns>Monthly_Contract__c</columns>
    <columns>Monthly_Fee__c</columns>
    <columns>Number_Of_Shipment__c</columns>
    <columns>Origin_City__c</columns>
    <columns>Product__c</columns>
    <columns>Shipment_Charge_Beyond_Limit__c</columns>
    <columns>Destination_City__c</columns>
    <columns>Active__c</columns>
    <columns>Activation_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>